--- a/scripts/elmer.template
+++ b/scripts/elmer.template
@@ -26,39 +26,39 @@ Constants
 End
 
 Body Force 1
-  Magnetization 1 = Real 1.45
+  Magnetization 1 = Real 1.15e6
   Magnetization 2 = Real 0
   Magnetization 3 = Real 0
 End
 
 Body Force 2
-  Magnetization 1 = Real -1.45
+  Magnetization 1 = Real -1.15e6
   Magnetization 2 = Real 0
   Magnetization 3 = Real 0
 End
 
 Body Force 3
   Magnetization 1 = Real 0
-  Magnetization 2 = Real 1.45
+  Magnetization 2 = Real 1.15e6
   Magnetization 3 = Real 0
 End
 
 Body Force 4
   Magnetization 1 = Real 0
-  Magnetization 2 = Real -1.45
+  Magnetization 2 = Real -1.15e6
   Magnetization 3 = Real 0
 End
 
 Body Force 5
   Magnetization 1 = Real 0
   Magnetization 2 = Real 0
-  Magnetization 3 = Real 1.45
+  Magnetization 3 = Real 1.15e6
 End
 
 Body Force 6
   Magnetization 1 = Real 0
   Magnetization 2 = Real 0
-  Magnetization 3 = Real -1.45
+  Magnetization 3 = Real -1.15e6
 End
 
 Material 1
